  - harpfilter has been removed (use harpconvert instead)
  - '--test' option of harpconvert has been removed (use harpcheck instead)

* Added -o option to harpdump and harmperge.

* Added -a and -o options for 'harpdump --list-derivations'.

* '--list-derivations' option of harpconvert has been removed (use harpdump
  instead).

* Added sort() operation.

* Added harp_product_sort() function.

* codadef files are now installed in <prefix>/share/coda/definitions.
  This allows a present CODA installation to use the same codadef files.

* Windows installation now installs data and documentation files in the
  subdirectory <prefix>/share/harp.

* Fix issue in deriving total column from partial column profile if partial
  column profile did not have {time,vertical} dimensions.

* Fix invalid results from binning operation/function.

* Improve speed of --list-derivations on a product.

* Updates to S5P product ingestions.

0.6 2017-04-23
~~~~~~~~~~~~~~

* Added ingestion support for ACE-FTS, CALIPSO, Cloud CCI, and NPP-Suomi.

* Added bin() and set() operations.

* Added optional data_type parameter to derive() operation.

* Major refactoring of internal implementation of operations (greatly
  reducing and simplifying the code).

* Fix application of apriori for smoothed column derivation (for vertical
  range where partial columns are NaN, don't subtract apriori*AVK, but just
  set to apriori).

* Fix memory issue in partial column from vmr dry air derivation.

* Remove double definition of radiance conversions.

* Added global HARP option `regrid_out_of_bounds`.

* Added harp_product_bin() function.

* Add data_type parameter to harp_product_add_derived_variable() and
  harp_product_get_derived_variable() functions.

* Added data_type parameter to harp_product_get_derived_variable() and
  harp_product_add_derived_variable() functions.

* Allow 'Conventions' global attribute to contain more than just a reference
  to HARP.
