@@ -188,6 +188,9 @@ the time dimension and storing the result into a single output file.</p>
                 <span class="n">of</span> <span class="n">an</span> <span class="o">&lt;</span><span class="n">option</span> <span class="n">name</span><span class="o">&gt;=&lt;</span><span class="n">value</span><span class="o">&gt;</span> <span class="n">pair</span><span class="o">.</span> <span class="n">An</span> <span class="n">option</span> <span class="nb">list</span> <span class="n">needs</span> <span class="n">to</span> <span class="n">be</span>
                 <span class="n">provided</span> <span class="k">as</span> <span class="n">a</span> <span class="n">single</span> <span class="n">expression</span><span class="o">.</span>
 
+            <span class="o">-</span><span class="n">l</span><span class="p">,</span> <span class="o">--</span><span class="nb">list</span>
+                <span class="n">Print</span> <span class="n">to</span> <span class="n">stdout</span> <span class="n">each</span> <span class="n">filename</span> <span class="n">that</span> <span class="ow">is</span> <span class="n">currently</span> <span class="n">being</span> <span class="n">merged</span><span class="o">.</span>
+
             <span class="o">-</span><span class="n">f</span><span class="p">,</span> <span class="o">--</span><span class="nb">format</span> <span class="o">&lt;</span><span class="nb">format</span><span class="o">&gt;</span>
                 <span class="n">Output</span> <span class="nb">format</span><span class="p">:</span>
                     <span class="n">netcdf</span> <span class="p">(</span><span class="n">default</span><span class="p">)</span>
